--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,8 @@
         <mockito.version>1.9.5</mockito.version>
         <jackson.version>2.7.5</jackson.version>
         <hibernate-entitymanager.version>5.1.0.Final</hibernate-entitymanager.version>
+        <org.apache.cxf.version>3.0.4</org.apache.cxf.version>
+        <org.codehaus.jackson.version>1.9.13</org.codehaus.jackson.version>
     </properties>
 
     <dependencies>
@@ -84,19 +86,19 @@
         <dependency>
             <groupId>org.apache.cxf</groupId>
             <artifactId>cxf-rt-frontend-jaxws</artifactId>
-            <version>3.0.4</version>
+            <version>${org.apache.cxf.version}</version>
         </dependency>
 
         <dependency>
             <groupId>org.apache.cxf</groupId>
             <artifactId>cxf-rt-frontend-jaxrs</artifactId>
-            <version>3.0.4</version>
+            <version>${org.apache.cxf.version}</version>
         </dependency>
 
         <dependency>
             <groupId>org.apache.cxf</groupId>
             <artifactId>cxf-rt-rs-client</artifactId>
-            <version>3.0.4</version>
+            <version>${org.apache.cxf.version}</version>
         </dependency>
 
 
@@ -114,7 +116,7 @@
         <dependency>
             <groupId>org.codehaus.jackson</groupId>
             <artifactId>jackson-jaxrs</artifactId>
-            <version>1.9.13</version>
+            <version>${org.codehaus.jackson.version}</version>
         </dependency>
 
 
@@ -124,6 +126,12 @@
             <groupId>log4j</groupId>
             <artifactId>log4j</artifactId>
             <version>${log4j.version}</version>
+        </dependency>
+        <!-- https://mvnrepository.com/artifact/org.slf4j/slf4j-simple -->
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-simple</artifactId>
+            <version>1.7.7</version>
         </dependency>
 
         <!-- Unit Test -->
@@ -146,6 +154,19 @@
             <artifactId>lombok</artifactId>
             <version>1.16.14</version>
             <scope>provided</scope>
+        </dependency>
+
+        <!-- Swagger -->
+        <dependency>
+            <groupId>io.springfox</groupId>
+            <artifactId>springfox-swagger2</artifactId>
+            <version>2.4.0</version>
+        </dependency>
+
+        <dependency>
+            <groupId>io.springfox</groupId>
+            <artifactId>springfox-swagger-ui</artifactId>
+            <version>2.4.0</version>
         </dependency>
 
     </dependencies>
